--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -90,7 +90,7 @@
       </div>
       <div class="pb-4" *ngIf="isAttending">
         <div>
-          <label for="numberOfGuests">Number Of Guests</label>
+          <label for="numberOfGuests">Total Attending</label>
         </div>
         <div
           class="relative flex items-center text-gray-400 focus-within:text-gray-600"
