Added click particles

--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -5,6 +5,8 @@
 >
 <ng-particles [id]="id" [options]="particlesOptions" [particlesInit]="particlesInit"
               (particlesLoaded)="particlesLoaded($event)"></ng-particles>
+  <ng-particles [id]="id2" [options]="particlesOptions2" [particlesInit]="particles2Init"
+  (particlesLoaded)="particlesLoaded($event)"></ng-particles>
   <div
     class="black-text-shadow flex items-center justify-center pt-8 font-bodyLuci text-white drop-shadow-lg md:text-5xl lg:text-7xl"
   >
